# peas

./: .beans.yml  .gitignore  .peas.toml  .peas.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  temp-beans-main-view.txt  test-body.txt  tombi.toml
.beans/: peas-04w4a--evaluate-beads-import-export.md  peas-0by8--implement-markdown-file-writing.md  peas-0gsu--implement-tui-inline-editing.md  peas-0qod--m4-polish-and-release.md  peas-10nc--design-graphql-mutations.md  peas-1q1u--m1-core-foundation.md  peas-2tp8--implement-cli-argument-parsing-with-clap.md  peas-352k--write-graphql-integration-tests.md  peas-3g87--implement-toml-frontmatter-parsing.md  peas-3shd--add-input-validation.md  peas-40sw8--cli-support-for-tags.md  peas-4988--code-hardening-and-cleanup.md  peas-4mmc--e22-graphql-server.md  peas-55yt--add-toml-dependency.md  peas-57zy--remove-unused-id-length-field-from-pearepository.md  peas-5ub9--e31-advanced-cli-commands.md  peas-5wco--replace-unwrap-calls-with-proper-error-handling.md  peas-6qxq--implement-or-remove-unused-cli-flags.md  peas-7dvdt--add-ticket-types-chore-story-research.md  peas-7u0r--create-project-module-structure.md  peas-8yk2--create-claude-code-hooks-configuration.md  peas-8yym--write-integration-tests-for-cli.md  peas-91oda--beans-importer.md  peas-9r1l--e41-testing-and-quality.md  peas-9txx--m3-cli-experience.md  peas-9yfg--implement-config-file-loading.md  peas-bqf9--add-module-level-documentation.md  peas-bszt--implement-show-command.md  peas-bvk6--design-graphql-schema-types.md  peas-cog0--consolidate-duplicate-filtering-logic.md  peas-cpjd--e13-basic-crud-operations.md  peas-d6hm--m2-graphql-interface.md  peas-d7zn--e12-data-model-and-storage.md  peas-dbu2--implement-create-command.md  peas-e1xq--implement-http-graphql-server.md  peas-ep55--m5-code-quality-improvements.md  peas-ffv0--implement-search-command.md  peas-fxfk--implement-context-command.md  peas-g6ax--assess-and-address-performance-bottlenecks.md  peas-g6xv--clean-up-rust-use-statements.md  (+41 more)
.cargo/: config.toml
.claude/: settings.json
.peas/: .undo  config.toml  peas-00pnq--reqwest-default-features-pull-in-unnecessary-tls-b.md  peas-0863y--create-filter-chips-for-active-filters.md  peas-0gsu--implement-tui-inline-editing.md  peas-0hfum--tree-view-show-parent-context-for-orphaned-childre.md  peas-0ia3f--add-dependency-audit-to-ci-pipeline.md  peas-0jdxh--add-selection-and-hover-states-for-tree-items.md  peas-0ktvu--decompose-tui-app-god-object-app-rs-2107-loc.md  peas-0pghv--add-asset-file-type-and-size-validation.md  peas-1aroj--add-save-cancel-actions-for-editors.md  peas-1bfpn--m6-code-quality-and-production-readiness.md  peas-1d6ki--e6-6-memory-system-improvements.md  peas-1dkxb--use-emojis-for-ticket-types-configurable.md  peas-1le6t--e7-6-asset-support.md  peas-1ls5h--prevent-scrolling-when-detail-content-fits.md  peas-1no8y--use-full-terminal-for-tree-view-modal-for-details.md  peas-1q1u--m1-core-foundation.md  peas-1uu22--create-memoryrepository-with-crud-operations.md  peas-22n9f--extract-cli-command-handlers-from-main-rs-to-cli-h.md  peas-294sd--add-comprehensive-config-validation.md  peas-2eao6--e6-2-tree-view.md  peas-2l4dj--no-subcommand-invocation-exits-silently-without-pr.md  peas-2l74u--add-partial-failure-handling-for-complex-operation.md  peas-2v2rx--e7-4-theme-and-visual-polish.md  peas-2w1bk--update-notice-in-peas-version-output.md  peas-32nbg--make-relationships-pane-scrollable.md  peas-352k--write-graphql-integration-tests.md  peas-37n2a--implement-virtual-scrolling-for-large-ticket-lists.md  peas-3agzw--update-deprecated-assert-cmd-api.md  peas-3g87--implement-toml-frontmatter-parsing.md  peas-3h9f1--m7-tui-refinements.md  peas-3mvco--updater-module-cache-http-fetch-version-comparison.md  peas-3s8g9--create-relations-pane-showing-parent-children-bloc.md  peas-3shd--add-input-validation.md  peas-40puj--update-notice-in-tui-footer.md  peas-41ekd--implement-memory-editing-capabilities.md  peas-493ps--evaluate-tachyonfx-for-tui-effects.md  peas-4988--code-hardening-and-cleanup.md  peas-4988a--code-hardening-and-cleanup.md  (+304 more)
docs/: architecture.md  cli-reference.md  data-model.md  design-for-cli-agents.md  development.md  graphql-api.md  index.md  scrapped-m7-gpui-desktop-app.md  storage-and-internals.md  tui-guide.md  (+1 more)
(+290 files in other folders)
