[package]
name = "peas"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A CLI-based, flat-file issue tracker for humans and robots"
license = "MIT"
repository = "https://github.com/user/peas"
homepage = "https://github.com/user/peas"
documentation = "https://github.com/user/peas#readme"
readme = "README.md"
keywords = ["cli", "issue-tracker", "graphql", "markdown", "tui"]
categories = ["command-line-utilities", "development-tools"]
authors = ["peas contributors"]
exclude = [".beans/", ".github/", "extras/", "tests/"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# GraphQL
async-graphql = "7"
async-graphql-axum = "7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system and paths
directories = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# ID generation
nanoid = "0.4"

# Text processing
slug = "0.1"

# Terminal UI (for later milestone, but declare now)
ratatui = "0.29"
crossterm = "0.28"

# HTTP server for GraphQL (optional feature)
axum = "0.8"

# Colored output
colored = "2"

# Markdown rendering in terminal
termimad = "0.30"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "peas"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
