[package]
name = "peas"
version = "0.1.0"
edition = "2024"
description = "A CLI-based, flat-file issue tracker for humans and robots"
license = "MIT"
repository = "https://github.com/asaaki/peas"
homepage = "https://github.com/asaaki/peas"
documentation = "https://github.com/asaaki/peas#readme"
readme = "README.md"
keywords = ["cli", "issue-tracker", "ai-agents", "llm", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".beans/", ".peas/", ".github/", "extras/", "tests/"]

[[bin]]
name = "peas"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.100"
async-graphql = "7.2.0"
async-graphql-axum = "7.2.0"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
colored = "3.1.1"
crossterm = "0.29.0"
directories = "6.0.0"
nanoid = "0.4.0"
ratatui = "0.30.0"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
slug = "0.1.6"
termimad = "0.34.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
